Ingress_secret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-https-test
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: https.test.com
    http:
      paths:
      - backend:
          service:
            name: my-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: my-service
            port:
              number: 80
        path: /test
        pathType: ImplementationSpecific
  - host: nginx.gray.com
    http:
      paths:
      - backend:
          service:
            name: my-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - test.com
    secretName: nginx-test-tls

#openssl req -x509 -nodes -days 365 \
# -newkey rsa:2048 -keyout tls.key -out tls.crt -subj "/CN=test.com"
# kubectl -n default create secret tls nginx-test-tls --key=tls.key --cert=tls.crt
